--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   sqflite: ^1.1.6
   path_provider: ^1.1.0
   http: ^0.12.0+2
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
