--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^1.1.0
   http: ^0.12.0+2
   intl: ^0.15.8
+  shared_preferences: ^0.5.3+1
 
 dev_dependencies:
   flutter_test:
