--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^0.5.3+1
   preferences: ^4.0.0
   dynamic_theme: ^1.0.0
+  autocomplete_textfield: ^1.7.3
 
 dev_dependencies:
   flutter_test:
