--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,12 +65,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Muli
+      fonts:
+        - asset: assets/Muli-Regular.ttf
+        - asset: fonts/Muli-RegularItalic.ttf
+          style: italic
+        - asset: fonts/Muli-Black.ttf
+        - asset: fonts/Muli-Bold.ttf
+          weight: 700
+        - asset: fonts/Muli-Light.ttf
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
